Update style.css - made changes to Luke A Chase css

--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,11 @@ body#lchase1 {
   font-size: 16px;
 }  
 
-body#lchase1 .wrapper {
+body#lchase1 a:link, a:active, a:visited, a:hover, a:focus {
+  color: #ff0;
+}
+
+body#lchase1 div.wrapper {
   background-color: #444;
   border-radius: 5px;
   box-shadow: 2px 2px 4px #000;
@@ -130,7 +134,7 @@ body#lchase1 header h2 {
   text-shadow: 1px 1px 3px #000;
 }
 
-body#lchase1 #logo-chase-luke-a {
+body#lchase1 header h1#logo-chase-luke-a {
   color: #000;
   font-size: 5em;
   margin: 0;
@@ -139,36 +143,41 @@ body#lchase1 #logo-chase-luke-a {
   padding-bottom: 40px;
 }
 
-body#lchase1 #logo-software-dev {
+body#lchase1 header h2#logo-software-dev {
   left: 10%;
   position: absolute;
   top: 0%;
 }
 
-body#lchase1 #logo-mobile-dev {
+body#lchase1 header h2#logo-mobile-dev {
   bottom: 0%;
   position: absolute;
   right: 10%;
 }
 
-body#lchase1 .resume h2 {
+body#lchase1 section#resume {
+  margin: 10px auto;
+  width: 90%;
+}
+
+body#lchase1 section#resume h2 {
   border-bottom: 3px solid #FF0;
 }
 
-body#lchase1 .resume h4 {
+body#lchase1 section#resume h4 {
   border: 1px solid #FFF;
   padding: 3px;
 }
 
-body#lchase1 .resume p {
+body#lchase1 section#resume p {
   font-style: italic;
   margin-left: 8px;
 }
 
 body#lchase1 footer {
   border-top: 2px solid #fff;
-  margin: 5px;
-  padding: 4px 0px 2px 0px;
+  margin: 10px;
+  padding: 10px;
   text-align: center;
   text-shadow: 1px 1px 3px #000;
 }
