--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,7 @@ body#lchase1 footer span#footerRight {
 }
 
 #lmatysik footer {
+  margin: 40px;
   text-align: center;
   text-decoration: underline;
 }
@@ -234,7 +235,12 @@ body#lchase1 footer span#footerRight {
   text-align: center;
 }
 
+#lmatysik article {
+  margin-left: 40px;
+}
+
 #lmatysik section h3 {
+  margin-left: 10px;
   text-decoration: underline;
 }
 
