--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,9 @@ body#bhogan article h2 {font-size: 1.25em }
 }
 
 /* Kelsy J Kaufman CSS for ../people/kkaufman6.html */
+.kkaufman{
+  background-color: #0cf0cf;
+}
 .kkaufman h1{
   color: #0cf;
   font-family: Tahoma, sans-serif;
@@ -113,14 +116,23 @@ body#bhogan article h2 {font-size: 1.25em }
 }
 
 .kkaufman h3{
+  background-color: #0cf0aa;
+  border-color: #0cf0cf;
+  border-radius: 3px;
+  border-style: solid;
+  border-width: 3px;
+  box-shadow: 2px 2px 2px #000000;
   color: #0cf;
   font-family: Tahoma, sans-serif;
   letter-spacing: 1px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   text-shadow: 1px 1px 1px #000fff;
+  width: 50%;
 }
 
-#kkaufman a{
+.kkaufman a{
   color: #ff00ff;
   margin: 10px;
 }
@@ -133,6 +145,7 @@ body#bhogan article h2 {font-size: 1.25em }
 }
 
 #kaufmanContainer{
+  background-color: #ffffff;
   border-color: #cccccc;
   border-radius: 3px;
   border-style: solid;
@@ -141,6 +154,13 @@ body#bhogan article h2 {font-size: 1.25em }
   margin: 5%;
   text-align: center;
   width: auto;
+}
+
+#kaufmanInfo{
+  font-family: Tahoma, Sans-Serif;
+  font-size: 18px;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 1px #cccccc;
 }
 
 #kkaufman li {
