--- a/css/style.css
+++ b/css/style.css
@@ -337,3 +337,58 @@ body#lchase1 footer span#footerRight {
 #ssteindorf {
   font-family: garamond;
 }
+
+#vanMain {
+    background-image: url("../images/background.jpg");
+    border-radius: 5px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+#vanMain h2 {
+   border-top: 1px solid #6e1d1d;
+   background: #972727;
+   background: -webkit-gradient(linear, left top, left bottom, from(#832222), to(#972727));
+   background: -moz-linear-gradient(top, #832222, #972727);
+   padding: 1px 10px;
+   border-radius: 8px;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 14px;
+   font-family: 'Buxton Sketch', serif;
+   text-decoration: none;
+   vertical-align: middle;
+   position: relative;
+   overflow: hidden;
+   display: inline-block;
+}
+
+#vanMain h2:before
+{
+   content: "";
+   width: 200%;
+   height: 200%;
+   position: absolute;
+   top: -200%;
+   left: -225%;
+
+   background-image: -webkit-linear-gradient(135deg, rgba(255,255,255,0), rgba(255,255,255,0.6), rgba(255,255,255,0)); 
+   background-image: -moz-linear-gradient(135deg, rgba(255,255,255,0), rgba(255,255,255,0.6), rgba(255,255,255,0));  
+
+     -moz-transition: all 0.5s ease-out; 
+       -o-transition: all 0.5s ease-out; 
+  -webkit-transition: all 0.5s ease-out;
+      -ms-transition: all 0.5s ease-out;
+}
+
+#vanMain h2:hover:before,
+#vanMain h2:focus:before
+{
+  top: 200%;
+  left: 200%;   
+}
+
+#vanMain h2:active:before
+{
+    opacity: 0;
+}
