--- a/css/style.css
+++ b/css/style.css
@@ -338,57 +338,113 @@ body#lchase1 footer span#footerRight {
   font-family: garamond;
 }
 
+#triangle-left {
+  border-top: 12.5px solid transparent;
+  border-right: 25px solid #972727;
+  border-bottom: 12.5px solid transparent;
+  height: 0;
+  margin: auto;
+  width: 0;
+}
+
+#triangle-right {
+  border-top: 12.5px solid transparent;
+  border-left: 25px solid #972727;
+  border-bottom: 12.5px solid transparent;
+  height: 0;
+  margin: auto;
+  width: 0;
+}
+
 #vanMain {
-    background-image: url("../images/background.jpg");
-    border-radius: 5px;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
+  background-color: black;
+}
+
+#vanMain .contact {
+  text-decoration: none;
+}
+
+#vanMain .contact a,
+#vanMain .contact a:visited {
+  color: #972727;
+  margin: 10px;
+}
+
+#vanMain .contact a:hover {
+  color: #ffd700;
+}
+
+#vanMain .container {
+  background-image: url("../images/background.jpg");
+  border-radius: 5px;
+  color: white;
+  font-size: 1.4em;
+}
+
+#vanMain a,
+#vanMain a:visited,
+#vanMain a:hover {
+  color: #ffd700;
+  text-decoration: none;
 }
 
 #vanMain h2 {
-   border-top: 1px solid #6e1d1d;
-   background: #972727;
-   background: -webkit-gradient(linear, left top, left bottom, from(#832222), to(#972727));
-   background: -moz-linear-gradient(top, #832222, #972727);
-   padding: 1px 10px;
-   border-radius: 8px;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   color: white;
-   font-size: 14px;
-   font-family: 'Buxton Sketch', serif;
-   text-decoration: none;
-   vertical-align: middle;
-   position: relative;
-   overflow: hidden;
-   display: inline-block;
+  background: #972727;
+  background: linear-gradient(to top, #832222, #972727);
+  border-top: 1px solid #6e1d1d;
+  border-radius: 8px;
+  box-shadow: rgba(0,0,0,1) 0 1px 0;
+  color: white;
+  display: inline-block;
+  font-size: 2.0em;
+  font-family: 'Buxton Sketch', serif;
+  margin: 10px auto 10px auto;
+  overflow: hidden;
+  padding: 1px 10px;
+  position: relative;
+  text-shadow: rgba(0,0,0,.4) 0 1px 0;
+  text-decoration: none;
+  vertical-align: middle;
 }
 
-#vanMain h2:before
-{
-   content: "";
-   width: 200%;
-   height: 200%;
-   position: absolute;
-   top: -200%;
-   left: -225%;
-
-   background-image: -webkit-linear-gradient(135deg, rgba(255,255,255,0), rgba(255,255,255,0.6), rgba(255,255,255,0)); 
-   background-image: -moz-linear-gradient(135deg, rgba(255,255,255,0), rgba(255,255,255,0.6), rgba(255,255,255,0));  
-
-     -moz-transition: all 0.5s ease-out; 
-       -o-transition: all 0.5s ease-out; 
-  -webkit-transition: all 0.5s ease-out;
-      -ms-transition: all 0.5s ease-out;
+#vanMain h2:before {
+  background-image: linear-gradient(135deg, rgba(255,255,255,0), rgba(255,255,255,0.6), rgba(255,255,255,0));
+  content: "";
+  height: 200%;
+  left: -225%;
+  position: absolute;
+  top: -200%;
+  transition: all 0.5s ease-out;
+  width: 200%;
 }
 
 #vanMain h2:hover:before,
-#vanMain h2:focus:before
-{
+#vanMain h2:focus:before {
+  left: 200%;
   top: 200%;
-  left: 200%;   
 }
 
-#vanMain h2:active:before
-{
-    opacity: 0;
+#vanMain h2:active:before {
+  opacity: 0;
+}
+
+#vanMain header {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+#vanMain footer {
+  text-align: center;
+}
+
+#vanMain main {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+#vanMain p {
+  font-size: 1.4em;
+  margin: 5px 0;
+  text-decoration: underline;
 }
