--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ body#lchase1 {
   background-color: #DDD;
   color: #fff;
   font-family: Arial, Verdana, sans-serif;
-  font-family: Share Tech Mono;
+  font-family: "Share Tech Mono";
   font-size: 16px;
 }  
 
