--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,9 @@ body#bhogan article h2 {font-size: 1.25em }
 }
 
 /* Kelsy J Kaufman CSS for ../people/kkaufman6.html */
+.kkaufman{
+  background-color: #0cf0cf;
+}
 .kkaufman h1{
   color: #0cf;
   font-family: Tahoma, sans-serif;
@@ -113,46 +116,56 @@ body#bhogan article h2 {font-size: 1.25em }
 }
 
 .kkaufman h3{
+  background-color: #0cf0aa;
+  border-color: #0cf0cf;
+  border-radius: 3px;
+  border-style: solid;
+  border-width: 3px;
+  box-shadow: 2px 2px 2px #000000;
   color: #0cf;
   font-family: Tahoma, sans-serif;
   letter-spacing: 1px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   text-shadow: 1px 1px 1px #000fff;
+  width: 50%;
 }
 
-#kaufmanContainer {
-  margin: 0 auto;
-  text-align: center;
-  width: 100%;
-}
-
-#kkaufman a{
+.kkaufman a{
   color: #ff00ff;
   margin: 10px;
 }
 
 #kaufmanMedia {
   width: 300px;
-  margin-left: 25%;
-  margin-right: 25%;
   background-color: #000000;
+  margin: 5%;
+  width: auto;
 }
 
 #kaufmanContainer{
-  width: auto;
-  margin-top: 5%;
-  margin-left: 5%;
-  margin-right: 5%;
-  box-shadow: 3px 3px 6px #000000;
-  border-width: 2px;
+  background-color: #ffffff;
+  border-color: #cccccc;
   border-radius: 3px;
   border-style: solid;
-  border-color: #cccccc;
+  border-width: 2px;
+  box-shadow: 3px 3px 6px #000000;
+  margin: 5%;
+  text-align: center;
+  width: auto;
+}
+
+#kaufmanInfo{
+  font-family: Tahoma, Sans-Serif;
+  font-size: 18px;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 1px #cccccc;
 }
 
 #kkaufman li {
-  margin-top: 8px;
   display: list-item;
+  margin-top: 8px;
   text-align: center;
 }
 
@@ -346,7 +359,7 @@ body#lchase1 footer span#footerRight {
 #miah h1{
   background-color: white;
   text-align: center;
-  font-family: Garamond;
+  font-family: Georgia; 
   font-weight: 200;
   font-size: 3em;
   letter-spacing: 4px;
@@ -358,7 +371,7 @@ body#lchase1 footer span#footerRight {
   position: relative;
   top: -30px;
 }
-.list_item_miah{
+.list_item_miahj{
   list-style-type: none; 
 }
 
@@ -374,28 +387,28 @@ body#lchase1 footer span#footerRight {
 #nav_list_miah a,
 #nav_list_miah:visited{
   background-color: #fff;
-  border: 1px solid #474747;
-  color: #474747;
+  border: 1px solid #ddd;
+  color: #ddd;
   display: block;  
-  margin: 0 0 20px 40px;
+  font-size: 1.2em;
+  margin: 20px;
   padding: 5px 15px;
   text-align: center;
   text-decoration: none;
   transition: border-color 0.4s ease-in,
+              background-color 0.4s ease-in,
               color 0.3s ease-out;
   width: 110px;
 }
 
 #nav_list_miah a:hover,
 #nav_list_miah a:active{
+  background-color: #66d8ed;
   border: 1px solid #66d8ed;
-  color: #66d8ed; 
+  color: white; 
   transition: border-color 0.4s ease-in,
+              background-color 0.4s ease-in,
               color 0.4s ease-in;
-}
-
-#nav_list_miah a:visited:hover{
-   background-color: white; 
 }
 
 .heading_miah a:hover{
