--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,15 @@ body#lchase1 footer span#footerRight {
   display: block;
   float: right;
 }
+
+body .tsweitzer {
+  background: #add;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
 /* ------------------------------------------------------------------------- */
 
 
