--- a/css/style.css
+++ b/css/style.css
@@ -358,20 +358,27 @@ body#lchase1 footer span#footerRight {
 
 #miah h1{
   background-color: white;
+  letter-spacing: 4px;
   text-align: center;
   font-family: Georgia; 
   font-weight: 200;
   font-size: 3em;
-  letter-spacing: 4px;
   width: 50%;
-  z-index: 1;
+}
+
+#miah h2{
+  background-color: white; 
+  display: inline-block;
+  text-align: center;
 }
 
 #miah hr{
+  margin-bottom: -15px;
   position: relative;
-  top: -30px;
+  top: -15px;
 }
-.list_item_miahj{
+
+.list_item_miah{
   list-style-type: none; 
 }
 
@@ -403,7 +410,7 @@ body#lchase1 footer span#footerRight {
 
 #nav_list_miah a:hover,
 #nav_list_miah a:active{
-  background-color: #66d8ed;
+  background: #66d8ed;
   border: 1px solid #66d8ed;
   color: white; 
   transition: border-color 0.4s ease-in,
